--- a/web/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/web/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -2,6 +2,7 @@
   position: relative;
   top: 0;
   height: 100vh;
+  overflow-x: hidden;
 
   &.wrapper-full-page {
     min-height: 100vh;
